--- a/pyproject.toml
+++ b/pyproject.toml
@@ -85,9 +85,14 @@ quote-style = "double"
 
 [tool.mypy]
 python_version = 3.12
+enable_error_code = "ignore-without-code"
 ignore_missing_imports = true
 follow_imports_for_stubs = true
+no_implicit_optional = true
+show_column_numbers = true
 warn_redundant_casts = true
+# warn_return_any = true  # TODO: Enable this check
+warn_unused_configs = true
 warn_unused_ignores = true
 show_error_codes = true
 pretty = true
