--- a/requirements.txt
+++ b/requirements.txt
@@ -14,4 +14,6 @@ pyenchant==3.2.2
 sphinx-copybutton
 sphinx-markdown-builder
 myst-parser==3.0.1
-black==24.10.0
+black>=24.10.0
+pyyaml>=6.0.2
+types-PyYAML-6.0.12>=6.0.12
