--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,7 +41,7 @@ dev = [
     "sphinx-copybutton",
     "sphinx-markdown-builder",
     "myst-parser==4.0.0",
-    "black>=24.10.0",
+    "black==24.10.0",
     "pyyaml>=6.0.2",
     "types-PyYAML-6.0.12>=6.0.12",
 ]
