--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ classifiers = [
 ]
 dependencies = [
     "apache-airflow>=2.3.0",
-    "datarobot>=3.3.1"
+    "datarobot>=3.7.0b0"
 ]
 
 [project.optional-dependencies]
