--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -8,6 +8,7 @@
 /datarobot_provider/operators/model_predictions.py       @datarobot/predictions
 /datarobot_provider/operators/monitoring.py              @datarobot/model-management
 /datarobot_provider/operators/monitoring_job.py          @datarobot/tracking-agent
+/datarobot_provider/operators/notebook.py                @datarobot/cfx
 /datarobot_provider/operators/prediction_explanations.py @datarobot/trust-explainable-ai
 /docs                                                    @datarobot/api-docs
 /tests/                                                  @datarobot/machine-learning-development
