[CFX-1399] Explicit ownership of the notebooks Sensor for CFX

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -10,5 +10,6 @@
 /datarobot_provider/operators/monitoring_job.py          @datarobot/tracking-agent
 /datarobot_provider/operators/notebook.py                @datarobot/cfx
 /datarobot_provider/operators/prediction_explanations.py @datarobot/trust-explainable-ai
+/datarobot_provider/sensors/notebook.py                  @datarobot/cfx
 /docs                                                    @datarobot/api-docs
 /tests/                                                  @datarobot/machine-learning-development
