--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
 
 [project.optional-dependencies]
 dev = [
+    "datarobot>=3.6.1",
     "pre-commit>=4.0.1",
     "ruff>=0.9.2",
     "mypy>=0.931",
