--- a/.harness/cichecks.yaml
+++ b/.harness/cichecks.yaml
@@ -97,8 +97,8 @@ pipeline:
                         command: |-
                           set -exuo pipefail
                           pip install apache-airflow
-                          pip install -r requirements-test.txt
-                          pip install airflow-provider-datarobot 
+                          pip install -r requirements.txt
+                          pip install airflow-provider-datarobot freezegun
                           airflow db init
                           airflow db check
                           pytest -vv tests/unit/ --junit-xml=unit_test_report.xml
