--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 apache-airflow>=2.3.0
-datarobot>=3.3.1
+datarobot>=3.6.1
 mypy>=0.931
 pytest>=7.0.0
 pytest-mock>=3.7.0
@@ -17,3 +17,4 @@ myst-parser==3.0.1
 black==24.10.0
 pyyaml>=6.0.2
 types-PyYAML>=6.0.12
+freezegun
