--- a/.harness/cichecks.yaml
+++ b/.harness/cichecks.yaml
@@ -147,8 +147,7 @@ pipeline:
                         command: |-
                           set -exuo pipefail
                           pip install apache-airflow
-                          pip install -r requirements.txt
-                          pip install airflow-provider-datarobot freezegun
+                          make req-dev
                           airflow db init
                           airflow db check
                           pytest -vv tests/unit/ --junit-xml=unit_test_report.xml
