--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@ dev = [
     "pytest>=7.0.0",
     "pytest-mock>=3.7.0",
     "pytest-helpers-namespace>=2021.12.29",
-    "Sphinx>=8.1.3",
+    "Sphinx>=7.4.7",
     "sphinx_rtd_theme>=3.0",
     "numpydoc>=1.7.0,<1.8.0",
     "sphinx-autodoc-typehints>=2",
@@ -46,6 +46,7 @@ dev = [
     "types-PyYAML>=6.0.12",
     "freezegun>=1.5.1",
 ]
+docs = []
 
 [project.entry-points."apache_airflow_provider"]
 provider_info = "datarobot_provider.__init__:get_provider_info"
