--- a/.harness/cichecks.yaml
+++ b/.harness/cichecks.yaml
@@ -132,16 +132,6 @@ pipeline:
               execution:
                 steps:
                   - step:
-                      spec:
-                        connectorRef: account.dockerhub_datarobot_read
-                        image: python:3.12
-                        shell: Bash
-                        command: |-
-                          set -exuo pipefail
-                          pip install -U pip
-                          pip install -r requirements.txt
-                          make lint
-                  - step:
                       type: Run
                       name: run build docs test
                       identifier: run_build_docs_tests
@@ -151,7 +141,7 @@ pipeline:
                         shell: Bash
                         command: |-
                           set -exuo pipefail
-                          make req-dev
+                          make req-dev-docs
                           make test-docs-harness
                         resources:
                           limits:
