--- a/.harness/cichecks.yaml
+++ b/.harness/cichecks.yaml
@@ -18,6 +18,7 @@ pipeline:
             description: ""
             type: CI
             spec:
+              cloneCodebase: true
               infrastructure:
                 type: KubernetesDirect
                 spec:
@@ -26,22 +27,20 @@ pipeline:
                   automountServiceAccountToken: true
                   nodeSelector: {}
                   os: Linux
-              cloneCodebase: true
               execution:
                 steps:
                   - parallel:
                       - step:
                           type: Run
                           name: lint check step
-                          identifier: run_lint
+                          identifier: run_lint_and_mypy
                           spec:
                             connectorRef: account.dockerhub_datarobot_read
                             image: python:3.12
                             shell: Bash
                             command: |-
                               set -exuo pipefail
-                              pip install -U pip
-                              pip install -r requirements.txt
+                              make req-dev
                               make lint
                       - step:
                           type: Run
@@ -53,8 +52,7 @@ pipeline:
                             shell: Bash
                             command: |-
                               set -exuo pipefail
-                              pip install -U pip
-                              pip install -r requirements.txt
+                              make req-dev
                               make format-no-fix
                       - step:
                           type: Run
@@ -66,8 +64,7 @@ pipeline:
                             shell: Bash
                             command: |-
                               set -exuo pipefail
-                              pip install -U pip
-                              pip install -r requirements.txt
+                              make req-dev
                               make typecheck
         - stage:
             name: Unit tests
@@ -96,12 +93,10 @@ pipeline:
                         shell: Bash
                         command: |-
                           set -exuo pipefail
-                          pip install apache-airflow
-                          pip install -r requirements.txt
-                          pip install airflow-provider-datarobot freezegun
+                          make req-dev
                           airflow db init
                           airflow db check
-                          pytest -vv tests/unit/ --junit-xml=unit_test_report.xml
+                          make test-harness
                         reports:
                           type: JUnit
                           spec:
@@ -119,3 +114,36 @@ pipeline:
                             - "3.11"
                             - "3.12"
                           nodeName: <+matrix.python_version>
+        - stage:
+            name: Build docs tests
+            identifier: test_build_docs
+            description: ""
+            type: CI
+            spec:
+              cloneCodebase: true
+              infrastructure:
+                type: KubernetesDirect
+                spec:
+                  connectorRef: account.cigeneral
+                  namespace: harness-delegate-ng
+                  automountServiceAccountToken: true
+                  nodeSelector: {}
+                  os: Linux
+              execution:
+                steps:
+                  - step:
+                      type: Run
+                      name: run build docs test
+                      identifier: run_build_docs_tests
+                      spec:
+                        connectorRef: account.dockerhub_datarobot_read
+                        image: python:3.12
+                        shell: Bash
+                        command: |-
+                          set -exuo pipefail
+                          make req-dev-docs
+                          make test-docs-harness
+                        resources:
+                          limits:
+                            memory: 1Gi
+                            cpu: "1.5"
