--- a/.harness/ci_checks_main_trigger.yaml
+++ b/.harness/ci_checks_main_trigger.yaml
@@ -1,6 +1,6 @@
 trigger:
   name: ci_checks_main_trigger
-  identifier: ci_checks_main_trigger_cancel
+  identifier: ci_checks_main_trigger
   enabled: true
   stagesToExecute: []
   description: ""
