--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,4 +1,6 @@
 *                                                        @datarobot/machine-learning-development
+/datarobot_provider/_experimental/operators/notebook.py  @datarobot/cfx
+/datarobot_provider/_experimental/sensors/notebook.py    @datarobot/cfx
 /datarobot_provider/operators/ai_catalog.py              @datarobot/mldata
 /datarobot_provider/operators/connections.py             @datarobot/mldata
 /datarobot_provider/operators/deployment.py              @datarobot/model-management
