Update template Publish Early Access to Pypi or TestPypi

--- a/.harness/templates/publish_early_access_to_pypi_or_testpypi.yaml
+++ b/.harness/templates/publish_early_access_to_pypi_or_testpypi.yaml
@@ -87,3 +87,10 @@ template:
                   }
 
                   main "$@"
+    variables:
+      - name: BUILD_TYPE
+        type: String
+        default: test
+        description: ""
+        required: true
+        value: <+input>.default(test).allowedValues(test,early-access,pypi)
