--- a/.harness/build_and_publish_early_access_pypi.yaml
+++ b/.harness/build_and_publish_early_access_pypi.yaml
@@ -11,3 +11,10 @@ pipeline:
         template:
           templateRef: publish_early_access_to_pypi_or_testpypi
           versionLabel: "1"
+          templateInputs:
+            type: CI
+            variables:
+              - name: BUILD_TYPE
+                type: String
+                default: test
+                value: <+input>.default(test).allowedValues(test,early-access,pypi)
