Update pipeline test_build_and_publish_early_access_pypi

--- a/.harness/build_and_publish_early_access_pypi.yaml
+++ b/.harness/build_and_publish_early_access_pypi.yaml
@@ -17,4 +17,4 @@ pipeline:
               - name: BUILD_TYPE
                 type: String
                 default: test
-                value: <+input>.default(test).allowedValues(test,early-access,pypi)
+                value: test
