Update template Publish Early Access to Pypi or TestPypi

--- a/.harness/templates/publish_early_access_to_pypi_or_testpypi.yaml
+++ b/.harness/templates/publish_early_access_to_pypi_or_testpypi.yaml
@@ -82,6 +82,7 @@ template:
 
                   main() {
                       configure_git
+                      pip3 install --no-cache-dir --upgrade pip setuptools wheel six twine
                       set_build_variables
                       build_and_upload
                       push_tags
