Update template Publish Early Access to Pypi or TestPypi

--- a/.harness/templates/publish_early_access_to_pypi_or_testpypi.yaml
+++ b/.harness/templates/publish_early_access_to_pypi_or_testpypi.yaml
@@ -67,6 +67,7 @@ template:
 
                       echo "[TWINE UPLOAD]"
                       twine upload \
+                          --verbose \
                           --repository-url "$REPO_URL" \
                           --username '__token__' \
                           --password "$UPLOAD_SECRET" \
