--- a/.harness/release_early_access_pypi.yaml
+++ b/.harness/release_early_access_pypi.yaml
@@ -6,36 +6,10 @@ pipeline:
     - stage:
         name: Lint
         identifier: Lint
-        description: ""
-        type: CI
-        spec:
-          cloneCodebase: true
-          caching:
-            enabled: true
-          buildIntelligence:
-            enabled: true
-          infrastructure:
-            type: KubernetesDirect
-            spec:
-              connectorRef: account.cigeneral
-              namespace: harness-delegate-ng
-              automountServiceAccountToken: true
-              nodeSelector: {}
-              os: Linux
-          execution:
-            steps:
-              - step:
-                  type: Run
-                  name: lint check step
-                  identifier: lint_check_step
-                  spec:
-                    connectorRef: account.dockerhub_datarobot_read
-                    image: python:3.12
-                    shell: Bash
-                    command: |-
-                      set -exuo pipefail
-                      make req-dev
-                      make lint
+        template:
+          templateRef: Lint_Repo
+          versionLabel: "1"
+          gitBranch: mattn/MLDEV-1211-full-ea-pipeline
     - stage:
         name: Publish to Pypi
         identifier: Publish_to_Pypi
