--- a/.harness/release_early_access_pypi.yaml
+++ b/.harness/release_early_access_pypi.yaml
@@ -1,6 +1,4 @@
 pipeline:
-  name: test-release-early-access-pypi
-  identifier: test_build_and_publish_early_access_pypi
   projectIdentifier: airflowproviderdatarobot
   orgIdentifier: AGENTS
   tags: {}
@@ -11,9 +9,10 @@ pipeline:
         template:
           templateRef: Lint_Repo
           versionLabel: "1"
+          gitBranch: mattn/MLDEV-1211-full-ea-pipeline
     - stage:
-        name: Publish to TestPypi
-        identifier: Publish_to_TestPypi
+        name: Publish to Pypi
+        identifier: Publish_to_Pypi
         template:
           templateRef: publish_early_access_to_pypi_or_testpypi
           versionLabel: "1"
@@ -23,10 +22,12 @@ pipeline:
               - name: BUILD_TYPE
                 type: String
                 default: test
-                value: test
+                value: pypi
   properties:
     ci:
       codebase:
         connectorRef: account.svc_harness_git1
         repoName: airflow-provider-datarobot
         build: <+input>
+  identifier: releaseearlyaccesspypi
+  name: release-early-access-pypi
