Update pipeline test-release-early-access-pypi

--- a/.harness/build_and_publish_early_access_pypi.yaml
+++ b/.harness/build_and_publish_early_access_pypi.yaml
@@ -22,7 +22,7 @@ pipeline:
             variables:
               - name: BUILD_TYPE
                 type: String
-                default: test
+                default: test-early-access
                 value: test
   properties:
     ci:
