Update pipeline test-release-early-access-pypi

--- a/.harness/build_and_publish_early_access_pypi.yaml
+++ b/.harness/build_and_publish_early_access_pypi.yaml
@@ -23,7 +23,7 @@ pipeline:
               - name: BUILD_TYPE
                 type: String
                 default: test-early-access
-                value: test
+                value: test-early-access
   properties:
     ci:
       codebase:
