Update pipeline release-early-access-pypi

--- a/.harness/release_early_access_pypi.yaml
+++ b/.harness/release_early_access_pypi.yaml
@@ -14,7 +14,7 @@ pipeline:
             variables:
               - name: BUILD_TYPE
                 type: String
-                default: test
+                default: test-early-access
                 value: pypi
   identifier: releaseearlyaccesspypi
   name: release-early-access-pypi
