Update pipeline release-early-access-pypi

--- a/.harness/release_early_access_pypi.yaml
+++ b/.harness/release_early_access_pypi.yaml
@@ -15,6 +15,6 @@ pipeline:
               - name: BUILD_TYPE
                 type: String
                 default: test-early-access
-                value: pypi
+                value: early-access
   identifier: releaseearlyaccesspypi
   name: release-early-access-pypi
