[MLDEV-1216] Update existing templates and pipelines to allow both release and early-access (#145)

--- a/.harness/build_and_publish_early_access_pypi.yaml
+++ b/.harness/build_and_publish_early_access_pypi.yaml
@@ -22,8 +22,8 @@ pipeline:
             variables:
               - name: BUILD_TYPE
                 type: String
-                default: test
-                value: test
+                default: test-early-access
+                value: test-early-access
   properties:
     ci:
       codebase:
