Update pipeline ci-checks

--- a/.harness/cichecks.yaml
+++ b/.harness/cichecks.yaml
@@ -208,7 +208,7 @@ pipeline:
                           set -exuo pipefail
                           ## Setup container environment
                           apk update
-                          apk add sudo make bash curl python3
+                          apk add sudo make bash curl python3 py3-pip
                           # Run testing
                           make install-astro
                           make create-astro-dev
